--- a/fullstack Đối Tác QLBH/Frontend QLBH/add_menu_for_restaurant.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/add_menu_for_restaurant.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Update Mon AN</title>
-    <p> Update Mon An Page</p>
+    <title>Add Menu For Restaurant</title>
 </head>
 <body>
-    
+        <h1>Code Ben Role Cua Hang</h1>
 </body>
 </html>
