Phúc 3rd commit

--- a/fullstack Đối Tác QLBH/Frontend QLBH/ChiTietDonHang.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/ChiTietDonHang.html
@@ -15,8 +15,8 @@
         <header class="middle">Chi tiết đơn hàng</header>
             <div class="container">
                 <div class="vertical-center">          
-                    <label id="CuaHang", for="">Cửa hàng</label>
-                    <label id="DonHang", for="">Mã đơn hàng</label>
+                    <!-- <label id="CuaHang", for="">Cửa hàng</label> -->
+                    <label id="KhachHang", for="">Mã khách hàng</label>
                 </div>
             </div>
         <main>
