Phúc 5th commit

--- a/fullstack Đối Tác QLBH/Frontend QLBH/DanhSachCuaHang.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/DanhSachCuaHang.html
@@ -12,7 +12,7 @@
         <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>    
     </head>
 
-    <body>
+    <body onpageshow="start()">
         <header class="middle">Tìm kiếm món ăn</header>
             <div class="container">
                 <div style="text-align: center;", class="vertical-center">
@@ -21,7 +21,6 @@
 
                     <p class="block">Giỏ hàng: </p>
                     <a id="SoLuong" href="./ChiTietDonHang.html" role="button">
-                        0
                       </a>
                 </div>
             </div>
@@ -31,7 +30,7 @@
                 <div style="text-align: center;", class="vertical-center">
                     <a id="redirect" href="./DanhSachMonAn.html" role="button">
                         Tìm theo cửa hàng
-                     </a>
+                    </a>
                 </div>  
             </div>
         </main>
