--- a/fullstack Đối Tác QLBH/Frontend QLBH/TheoDoiDonHang.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/TheoDoiDonHang.html
@@ -8,14 +8,14 @@
         </style>
         <!-- external -->
         <link rel="stylesheet" href="./css/TheoDoiDonHang.css"> 
-        
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
 
     <body>
         <header class="middle">Tình trạng đơn hàng</header>
         <main>
-            <div class="brand">
-                <div id="branch">
+            <div class="order">
+                <div id="status">
                     <table>
                         <tr>
                             <th>STT</th>
@@ -68,7 +68,12 @@
                         </tr>
                     </table>
                 </div>
-            </div>            
+            </div> 
+            <div style="margin-top:1%;">
+                <a id="redirect" href="./DanhSachMonAn.html" role="button">
+                    <i class="glyphicon glyphicon-home" ></i>
+                </a>
+            </div>           
         </main>  
     </body>
 </html>
