--- a/fullstack Đối Tác QLBH/Frontend QLBH/ChiTietDonHang.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/ChiTietDonHang.html
@@ -8,7 +8,8 @@
         </style>
         <!-- external -->
         <link rel="stylesheet" href="./css/ChiTietDonHang.css"> 
-        
+        <script src="./js/ChiTietDonHang.js"> </script>
+        <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>    
     </head>
 
     <body>
@@ -20,8 +21,8 @@
                 </div>
             </div>
         <main>
-            <div class="brand">
-                <div id="branch">
+            <div class="bill">
+                <div id="detail">
                     <table>
                         <tr>
                             <th>STT</th>
@@ -30,46 +31,6 @@
                             <th>Số lượng</th>
                             <th>Ghi chú</th>
                             <th>Thành tiền</th> 
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Tên món</label></td>
-                            <td><label for="">Đơn giá</label></td>
-                            <td><label for="">Số lượng</label></td>
-                            <td><label for="">Ghi chú</label></td>
-                            <td><label for="">Thành tiền</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Tên món</label></td>
-                            <td><label for="">Đơn giá</label></td>
-                            <td><label for="">Số lượng</label></td>
-                            <td><label for="">Ghi chú</label></td>
-                            <td><label for="">Thành tiền</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Tên món</label></td>
-                            <td><label for="">Đơn giá</label></td>
-                            <td><label for="">Số lượng</label></td>
-                            <td><label for="">Ghi chú</label></td>
-                            <td><label for="">Thành tiền</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Tên món</label></td>
-                            <td><label for="">Đơn giá</label></td>
-                            <td><label for="">Số lượng</label></td>
-                            <td><label for="">Ghi chú</label></td>
-                            <td><label for="">Thành tiền</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Tên món</label></td>
-                            <td><label for="">Đơn giá</label></td>
-                            <td><label for="">Số lượng</label></td>
-                            <td><label for="">Ghi chú</label></td>
-                            <td><label for="">Thành tiền</label></td>
                         </tr>
                         <tr>
                             <td><label for="">STT</label></td>
@@ -108,8 +69,10 @@
                 <label id="ship", for="">Ship</label>
                 <label id="sum",for="">Sum</label>
             </div>
-            <div style="margin-top:1%;">
-                <button style="padding: 0.5%; border: 1px solid black;">Thanh toán</button>
+            <div style="margin-top:1.5%;">
+                <a class="button" id="redirect" href="./TheoDoiDonHang.html" role="button" onclick="pay()" style="padding: 0.5%; border: 1px solid black;">
+                    Thanh toán
+                </a>             
             </div>
             
         </main>  
