--- a/fullstack Đối Tác QLBH/Frontend QLBH/DanhSachMonAn.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/DanhSachMonAn.html
@@ -22,7 +22,7 @@
         <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>     
     </head>
 
-    <body>
+    <body onpageshow="start()">
         <header class="middle">Tìm kiếm thông tin món ăn của cửa hàng</header>
             <div class="container">
                 <div style="text-align: center;", class="vertical-center">
@@ -30,8 +30,7 @@
                     <button onclick="getDiskes()" id="search">Tìm kiếm</button> 
 
                     <p class="block">Giỏ hàng: </p>
-                    <a id="SoLuong" href="./ChiTietDonHang.html" role="button" onclick="calc()">
-                        0
+                    <a id="SoLuong" href="./ChiTietDonHang.html" role="button">
                     </a>
                 </div>
             </div>
@@ -41,7 +40,7 @@
                 <div style="text-align: center;", class="vertical-center">
                     <a id="redirect" href="./DanhSachCuaHang.html" role="button">
                         Tìm theo món ăn
-                      </a>
+                    </a>
                 </div>
             </div>
         </main>     
