--- a/fullstack Đối Tác QLBH/Frontend QLBH/DanhSachCuaHang.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/DanhSachCuaHang.html
@@ -28,9 +28,9 @@
             <div class="brand"></div>
             <div  style="border:none;" class="container">
                 <div style="text-align: center;", class="vertical-center">
-                    <a id="redirect" href="./DanhSachMonAn.html" role="button">
-                        Tìm theo cửa hàng
-                    </a>
+                    <button id = "redirect" onclick="emptyStorage()">
+                        Tìm theo món ăn
+                    </button>
                 </div>  
             </div>
         </main>
