--- a/fullstack Đối Tác QLBH/Frontend QLBH/TheoDoiDonHang.html
+++ b/fullstack Đối Tác QLBH/Frontend QLBH/TheoDoiDonHang.html
@@ -8,70 +8,24 @@
         </style>
         <!-- external -->
         <link rel="stylesheet" href="./css/TheoDoiDonHang.css"> 
+        <script src="./js/TheoDoiDonHang.js"> </script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>    
     </head>
 
-    <body>
+    <body onpageshow="start()">
         <header class="middle">Tình trạng đơn hàng</header>
+        <div class="container" style="width: 100%">
+            <div class="vertical-center">          
+                <!-- <label id="CuaHang", for="">Cửa hàng</label> -->
+                <label id="KhachHang", for="">Mã khách hàng</label>
+            </div>
+        </div>
         <main>
-            <div class="order">
-                <div id="status">
-                    <table>
-                        <tr>
-                            <th>STT</th>
-                            <th>Mã hóa đơn</th>
-                            <th>Tổng tiền</th>
-                            <th>Trạng thái</th>
-                            <th>Ngày, giờ lập đơn</th>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Mã hóa đơn</label></td>
-                            <td><label for="">Tổng tiền</label></td>
-                            <td><label for="">Trạng thái</label></td>
-                            <td><label for="">Ngày, giờ lập đơn</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Mã hóa đơn</label></td>
-                            <td><label for="">Tổng tiền</label></td>
-                            <td><label for="">Trạng thái</label></td>
-                            <td><label for="">Ngày, giờ lập đơn</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Mã hóa đơn</label></td>
-                            <td><label for="">Tổng tiền</label></td>
-                            <td><label for="">Trạng thái</label></td>
-                            <td><label for="">Ngày, giờ lập đơn</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Mã hóa đơn</label></td>
-                            <td><label for="">Tổng tiền</label></td>
-                            <td><label for="">Trạng thái</label></td>
-                            <td><label for="">Ngày, giờ lập đơn</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Mã hóa đơn</label></td>
-                            <td><label for="">Tổng tiền</label></td>
-                            <td><label for="">Trạng thái</label></td>
-                            <td><label for="">Ngày, giờ lập đơn</label></td>
-                        </tr>
-                        <tr>
-                            <td><label for="">STT</label></td>
-                            <td><label for="">Mã hóa đơn</label></td>
-                            <td><label for="">Tổng tiền</label></td>
-                            <td><label for="">Trạng thái</label></td>
-                            <td><label for="">Ngày, giờ lập đơn</label></td>
-                        </tr>
-                    </table>
-                </div>
-            </div> 
+            <div class="order"></div> 
             <div style="margin-top:1%;">
-                <a id="redirect" href="./DanhSachMonAn.html" role="button">
-                    <i class="glyphicon glyphicon-home" ></i>
+                <a id="redirect" href="./DanhSachMonAn.html" role="button" style="padding: 10px 20px">
+                    <i class="glyphicon glyphicon-home" style="font-size: 20px"></i>
                 </a>
             </div>           
         </main>  
