--- a/Frontend/partner_signup.html
+++ b/Frontend/partner_signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Sign-in Form</title>
-    <link rel="stylesheet" href = "css/partner_signup.css">
+    <link rel="stylesheet" href = "style_partnerSU.css">
 </head>
 <body>
     <div class = "topnav">
@@ -72,6 +72,6 @@
             </div>
         </div>
     </form>
-    <script src="js/partner_signup_script.js"></script>
+    <script src="script_partnerSU.js"></script>
 </body>
 </html>
