--- a/Frontend/update.html
+++ b/Frontend/update.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Menu For Restaurant</title>
+    <title>Update Mon AN</title>
+    <p> Update Mon An Page</p>
 </head>
 <body>
-        <h1>Code Ben Role Cua Hang</h1>
+    
 </body>
 </html>
